# CMakeTut

./: .gitignore  CMakeLists.txt  README.md  code.c  main.c
inc/: config.h.in  main.h
lib/: CMakeLists.txt  chao.c  chao.h
